FIx history on mobile

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -110,7 +110,7 @@ body {
   display: inline-block;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 821px) {
   .info-trailer-container {
     flex-direction: column;
   }
